--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "React Shop project",
   "icons": [
     {
-      "src": "",
+      "src": "https://icons8.ru/icon/M1E1lvfGKP4l/online-shop",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
